Dark mode fix

--- a/resources/sass/darkmode.scss
+++ b/resources/sass/darkmode.scss
@@ -143,3 +143,8 @@ body {
         background: $border-bg;
     }
 }
+
+.btn {
+    box-shadow: 0 1px 0 0 1px 0 rgb(0 0 0 / 0.10), inset 0 1px 0 rgb(0 0 0 / 0.3);
+    border-color: rgb(255 255 255 / 0.20);
+}
